--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,28 @@
 #myCanvas {
-  border: 3px solid black
+  border: 3px solid black;
+}
+#container {
+  display: flex;
+}
+.box {
+  width: 450px;
+  height: 350px;
+  border: 3px solid black;
+  margin: auto;
+}
+.title {
+  text-align: center;
+  font-size: 40px;
+}
+#instruction-text {
+  text-align: center;
+}
+#control-container {
+  margin-left: 10px;
 }
 #button-container {
   margin-left: 175px;
+  margin-top: 7px;
 }
 #start {
   background-color: green;
