--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,9 @@
 }
 #instruction-text {
   text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 #control-container {
   margin-left: 10px;
