--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,10 @@
 }
 #container {
   display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 10px;
 }
 .box {
   width: 450px;
@@ -16,9 +20,6 @@
 }
 #instruction-text {
   text-align: center;
-  position: absolute;
-  top: 0;
-  right: 0;
 }
 #control-container {
   margin-left: 10px;
