--- a/styles/main.css
+++ b/styles/main.css
@@ -4,15 +4,14 @@
 #container {
   display: flex;
   position: absolute;
-  top: 0;
-  right: 0;
-  margin-right: 10px;
+  top: 7px;
+  right: 10px;
 }
 .box {
   width: 450px;
   height: 350px;
   border: 3px solid black;
-  margin: auto;
+  margin-left: 5px;
 }
 .title {
   text-align: center;
