--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,7 @@
 #instruction-text {
   text-align: justify;
   margin-left: 10px;
+  margin-right: 10px;
 }
 #control-container {
   margin-left: 10px;
